base setup with craco

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,7 @@
-@import './helpers/breakpoints';
+// Variables
+@import './variables/index.scss';
+
+// Trumps
+@import "trumps/index.scss";
 
 @import 'antd/dist/antd.css';
